Score is added to UI + removed old projects